--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ netlify_lambda_http = "0.2"
 tokio = { version = "1.0.1", features = ["macros"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+http = "0.2.4"
